Plantillas disponibles - New!

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
-  <title>ChatGPT Enterprise – Prompt Library</title>
+  <title>ChatGPT Enterprise – Librería de Prompts</title>
 </head>
 <body>
   <header>
-    <h1>ChatGPT Enterprise – Prompt Library</h1>
+    <div class="headerContent">
+      <h1>ChatGPT Enterprise – Prompt Library</h1>
+      <nav class="headerNav">
+        <a href="index.html" class="navLink active">📚 Prompts</a>
+        <a href="agents.html" class="navLink">🤖 Agentes</a>
+        <a href="framework.html" class="navLink">⚡ Plantillas Ejecutivas</a>
+      </nav>
+    </div>
   </header>
 
   <div class="container">
