--- a/agents.html
+++ b/agents.html
@@ -13,6 +13,7 @@
         <a href="index.html" class="navLink">📚 Prompts</a>
         <a href="agents.html" class="navLink active">🤖 Agentes</a>
         <a href="framework.html" class="navLink">⚡ Plantillas Ejecutivas</a>
+        <a href="dpc.html" class="navLink">🔍 DPC Check</a>
       </nav>
     </div>
   </header>
@@ -22,6 +23,7 @@
     <div id="wizardContainer" style="display:none;"></div>
   </div>
 
+  <script src="sanitize.js"></script>
   <script src="agents.js"></script>
 </body>
 </html>
