--- a/framework.html
+++ b/framework.html
@@ -14,6 +14,7 @@
         <a href="index.html" class="navLink">📚 Prompts</a>
         <a href="agents.html" class="navLink">🤖 Agentes</a>
         <a href="framework.html" class="navLink active">⚡ Plantillas Ejecutivas</a>
+        <a href="dpc.html" class="navLink">🔍 DPC Check</a>
       </nav>
     </div>
   </header>
@@ -40,6 +41,7 @@
     </div>
   </div>
 
+  <script src="sanitize.js"></script>
   <script src="framework.js"></script>
 </body>
 </html>
