--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="index.html" class="navLink active">📚 Prompts</a>
         <a href="agents.html" class="navLink">🤖 Agentes</a>
         <a href="framework.html" class="navLink">⚡ Plantillas Ejecutivas</a>
+        <a href="dpc.html" class="navLink">🔍 DPC Check</a>
       </nav>
     </div>
   </header>
